# MisoTTS-fork

./: .dockerignore  .gitignore  CHANGES_FROM_MAIN_REPO.md  README.md  docker-compose.openai.yml  docker-compose.runpod.yml  generator.py  models.py  moshi_compat.py  profile_misotts.py  pyproject.toml
deploy/: Dockerfile  Dockerfile.blackwell  Dockerfile.modern  Dockerfile.openai  Dockerfile.runpod  README.md  build_bf16_checkpoint.py  build_quant_checkpoint.py  check_perframe_decode.py  check_pipeline.py  check_post_eos.py  check_sdpa.py  check_stream_quality.py  check_watermark_defer.py  check_watermark_isolate.py  check_watermark_msg.py  check_watermark_rate.py  measure_vram.py  microbench_quant.py  model_card_bf16.md  profile_container.py  profile_full.py  profile_stream.py  quantize_nvfp4.py  render_greedy.py  render_quality.py  requirements-modern.txt  requirements-serving.txt  score_quality.py  smoke_serving.py  upload_quant_repos.py  validate_modern.py
deploy/miso_server/: __init__.py  audio.py  core.py  handler.py  openai_api.py  runpod_local.py
deploy/prompts/: README.md
examples/: stream_demo.py
perf_eval/: __init__.py  amplitude.py  investigate_truncation.py  prompts.py  render.py  run_eval.py  score_wavs.py  smoke.py  truncation.py
tests/: test_streaming_generation.py
